--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -5,7 +5,10 @@ spring:
 
   application:
     name: gateway
-
+    
+  threads:
+    virtual:
+      enabled: true
 
   security.oauth2.client:
     provider:
