--- a/me-service/src/main/resources/application.yml
+++ b/me-service/src/main/resources/application.yml
@@ -8,10 +8,12 @@ spring:
 
   sql:
     init:
+      continue-on-error: true
       mode: always
+    
   
   datasource:
-    url: dbc:postgresql://localhost:5432/mydatabase
+    url: jdbc:postgresql://localhost:5432/mydatabase
     username: myuser
     password: secret
 
@@ -29,7 +31,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://127.0.0.1:9090
+          issuer-uri: ${AUTH_SERVER_ADDRESS:http://127.0.0.1:9090}
 
 server:
   port: 8081
